--- a/MixedMessage/README
+++ b/MixedMessage/README
@@ -48,4 +48,4 @@ You need to have the following installed on your computer:
 - Nodes.js
 
 The code is written in basic javascript syntax on a file called mains.js which you will find on this repository.
-You can open and run the file on VSCode as per the screenshot or open and run the file on Git Bash as per screenshot.
+You can open and run the file on VSCode as per the screenshot or open and run the file on Git Bash as per screenshot. another change
